<resources>
    <string name="app_name">GAI</string>
    <string name="gai_logo">СПРАВОЧНИК ГАИ</string>
    <string name="view_txt_shtraf">ШТРАФЫ</string>
    <string name="view_txt_ugon">УГОН</string>
    <string name="button_ugon">Проверить на угон</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proverka_shtrafov">Проверить ТС на угон</string>
    <string name="vin_project">VIN/Номер кузова</string>
    <string name="prov">ПРОВЕРИТЬ НАЛИЧИЕ ШТРАФА</string>
    <string name="sts">СТС</string>
    <string name="gos">ГОСУДАРСТВЕННЫЙ НОМЕР</string>
    <string name="MARKAAVTO">МАРКА АВТОМОБИЛЯ:</string>
    <string name="GOS">ГОС НОМЕР:</string>
    <string name="title_activity_delete2">delete2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>