<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="409dp"
            android:layout_height="69dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/dob_btn"
                    android:layout_width="83dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@android:string/VideoView_error_button"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/free_icon_clipboard_6139778" />

                <ImageButton
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/view_txt_shtraf"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_shtraf__2_" />

                <ImageButton
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="82dp"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/view_txt_ugon"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/img" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="77dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:contentDescription="@string/hello_blank_fragment"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/delete" />

            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"

            android:layout_marginEnd="30dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>