<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ShtrafFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20sp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/gos"
            android:inputType="textPersonName"

            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/st"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/sts"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/shtrafbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"

            android:background="@drawable/btn_theme"
            android:fontFamily="@font/open_sans"
            android:text="@string/prov"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="444dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_theme"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="ШТРАФЫ"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/MARKAAVTO"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="VIN/НОМЕР КУЗОВА:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/GOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/GOS"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="В УГОНЕ?"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="СТС:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="ФИО:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>