<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".UgonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/VINN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20sp"
            android:ems="10"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9"
            android:fontFamily="@font/open_sans"
            android:hint="@string/vin_project"

            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20sp"
            android:background="@drawable/btn_theme"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:fontFamily="@font/open_sans"
            android:text="@string/proverka_shtrafov"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_theme"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="СОСТОЯНИЕ ОБ УГОНЕ"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="МАРКА АВТОМОБИЛЯ:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="VIN/НОМЕР КУЗОВА:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"

                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/GOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="7sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/GOS"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="ШТРАФЫ:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="СТС:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans"
                android:text="ФИО:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/open_sans"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>